task 1 for lecture 1 done

--- a/Task 1/index.html
+++ b/Task 1/index.html
@@ -1,11 +1,147 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-</head>
-<body>
-    
-</body>
+    <head>
+        <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <title>Document</title>
+    </head>
+    <body style="background-color:indigo;">
+        <h1 style="color: darkgoldenrod;">MISR TRAVELS</h1>
+        <h4 style="color: azure;"> this is our places for our clients this week
+            we hope to be good for you</h4>
+        <table>
+            <tr>
+                <td style="background-color: cornflowerblue;">
+                    <p>
+                        Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                        Incidunt reiciendis praesentium, non molestiae
+                        consequatur
+                        porro optio vitae minima beatae vel numquam dolore id
+                        animi
+                        ab hic deserunt eaque quidem assumenda!
+                    </p>
+                </td>
+                <td>
+                    <img width="250"
+                        src="https://img.freepik.com/free-photo/tasty-burger-isolated-white-background-fresh-hamburger-fastfood-with-beef-cheese_90220-1063.jpg?w=740&t=st=1696968469~exp=1696969069~hmac=e088497ec991ae5a4eeec761c7c08ceb0b10a6d46241dd5547ad395341dc1dbd"
+                        alt="burger image">
+                </td>
+                <td style="background-color: cornflowerblue;">
+                    <p>
+                        Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                        Incidunt reiciendis praesentium, non molestiae
+                        consequatur
+                        porro optio vitae minima beatae vel numquam dolore id
+                        animi
+                        ab hic deserunt eaque quidem assumenda!
+                    </p>
+
+                </td>
+                <td>
+                    <img width="250"
+                        src="https://img.freepik.com/free-photo/assortment-leaves-flowers-white-background_24972-2180.jpg?w=740&t=st=1696969074~exp=1696969674~hmac=cfc272adf2c095bed894c702700b108332245aa601991167fb6beb5632c3545a"
+                        alt="flower image">
+                </td>
+            </tr>
+            <tr>
+                <td style="background-color: cornflowerblue;">
+                    <p>
+                        Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                        Incidunt reiciendis praesentium, non molestiae
+                        consequatur
+                        porro optio vitae minima beatae vel numquam dolore id
+                        animi
+                        ab hic deserunt eaque quidem assumenda!
+                    </p>
+                </td>
+                <td>
+                    <img width="250"
+                        src="https://img.freepik.com/free-photo/tasty-burger-isolated-white-background-fresh-hamburger-fastfood-with-beef-cheese_90220-1063.jpg?w=740&t=st=1696968469~exp=1696969069~hmac=e088497ec991ae5a4eeec761c7c08ceb0b10a6d46241dd5547ad395341dc1dbd"
+                        alt="burger image">
+                </td>
+                <td style="background-color: cornflowerblue;">
+                    <p>
+                        Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                        Incidunt reiciendis praesentium, non molestiae
+                        consequatur
+                        porro optio vitae minima beatae vel numquam dolore id
+                        animi
+                        ab hic deserunt eaque quidem assumenda!
+                    </p>
+
+                </td>
+                <td>
+                    <img width="250"
+                        src="https://img.freepik.com/free-photo/assortment-leaves-flowers-white-background_24972-2180.jpg?w=740&t=st=1696969074~exp=1696969674~hmac=cfc272adf2c095bed894c702700b108332245aa601991167fb6beb5632c3545a"
+                        alt="flower image">
+                </td>
+            </tr>
+            <tr>
+                <td style="background-color: cornflowerblue;">
+                    <p>
+                        Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                        Incidunt reiciendis praesentium, non molestiae
+                        consequatur
+                        porro optio vitae minima beatae vel numquam dolore id
+                        animi
+                        ab hic deserunt eaque quidem assumenda!
+                    </p>
+                </td>
+                <td>
+                    <img width="250"
+                        src="https://img.freepik.com/free-photo/tasty-burger-isolated-white-background-fresh-hamburger-fastfood-with-beef-cheese_90220-1063.jpg?w=740&t=st=1696968469~exp=1696969069~hmac=e088497ec991ae5a4eeec761c7c08ceb0b10a6d46241dd5547ad395341dc1dbd"
+                        alt="burger image">
+                </td>
+                <td style="background-color: cornflowerblue;">
+                    <p>
+                        Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                        Incidunt reiciendis praesentium, non molestiae
+                        consequatur
+                        porro optio vitae minima beatae vel numquam dolore id
+                        animi
+                        ab hic deserunt eaque quidem assumenda!
+                    </p>
+
+                </td>
+                <td>
+                    <img width="250"
+                        src="https://img.freepik.com/free-photo/assortment-leaves-flowers-white-background_24972-2180.jpg?w=740&t=st=1696969074~exp=1696969674~hmac=cfc272adf2c095bed894c702700b108332245aa601991167fb6beb5632c3545a"
+                        alt="flower image">
+                </td>
+            </tr>
+            <tr>
+                <td style="background-color: cornflowerblue;">
+                    <p>
+                        Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                        Incidunt reiciendis praesentium, non molestiae
+                        consequatur
+                        porro optio vitae minima beatae vel numquam dolore id
+                        animi
+                        ab hic deserunt eaque quidem assumenda!
+                    </p>
+                </td>
+                <td>
+                    <img width="250"
+                        src="https://img.freepik.com/free-photo/tasty-burger-isolated-white-background-fresh-hamburger-fastfood-with-beef-cheese_90220-1063.jpg?w=740&t=st=1696968469~exp=1696969069~hmac=e088497ec991ae5a4eeec761c7c08ceb0b10a6d46241dd5547ad395341dc1dbd"
+                        alt="burger image">
+                </td>
+                <td style="background-color: cornflowerblue;">
+                    <p>
+                        Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                        Incidunt reiciendis praesentium, non molestiae
+                        consequatur
+                        porro optio vitae minima beatae vel numquam dolore id
+                        animi
+                        ab hic deserunt eaque quidem assumenda!
+                    </p>
+
+                </td>
+                <td>
+                    <img width="250"
+                        src="https://img.freepik.com/free-photo/assortment-leaves-flowers-white-background_24972-2180.jpg?w=740&t=st=1696969074~exp=1696969674~hmac=cfc272adf2c095bed894c702700b108332245aa601991167fb6beb5632c3545a"
+                        alt="flower image">
+                </td>
+            </tr>
+        </table>
+    </body>
 </html>
